2014-06-17  William A. Perkins  <william.perkins@pnnl.gov>

	* mass2_parallel.f90 (output): only print the scalar mass balance
	if there is one

2014-06-16  William A. Perkins  <william.perkins@pnnl.gov>

	* scalar_solve.f90 (transport_precalc): call to bedshear() no
	longer necessary 

	* bed.f90 (bed_initialize): remove extraneous put

	* hydro_solve.f90 (hydro): call block_hydro_update_bc() which
	contains all the stuff that used to be here

	* block_hydro_bc.f90 (block_hydro_update_bc): add routine that
	collects necessary tasks to prepare for a hydro iteration (BC,
	dead cells, etc.)

2014-06-13  William A. Perkins  <william.perkins@pnnl.gov>

	* plot_cgns.f90 (plot_cgns_write): used wrong index for collecting
	particulate 

	* bed_var.f90 (bed_var_allocate): initialize %slices

	* bed_functions.f90 (bed_post_timestep): use bed_put()

	* bed.f90 (bed_put): put pore flux for all species

	* gage_output_module.f90 (gage_print_text): particulate bed mass
	was incorrect

2014-06-10  William A. Perkins  <william.perkins@pnnl.gov>

	* scalar_solve.f90 (transport_precalc): need to compute bedshear

	* plot_cgns.f90 (plot_cgns_write): output some bed variables; more
	needed 

	* particulate_source.f90 (part_bed_exch, part_dissolve_bed_exch):
	enable the old calculations

	* mass2_parallel.f90 (update): turn bed accounting back on

	* hydro_solve.f90: add some GA after gets

	* hotstart.f90: add some GA after gets

	* block_parallel.f90 (block_module): require an index for the
	variable 

	* block_initialization.f90: add some GA sync's after gets

	* bed_functions.f90 (bed_post_timestep): add

	* Makefile.am: adjust some object/module dependencies 

2014-06-09  William A. Perkins  <william.perkins@pnnl.gov>

	* sediment_source.f90 (sediment_erosion): turn erosion on
	(sediment_source_term): deposition and erosion rates for output
	are not set here

2014-06-08  William A. Perkins  <william.perkins@pnnl.gov>

	* bed.f90 (bed_collect): added
