@@ -1,3 +1,8 @@
+2014-06-30  William A. Perkins  <william.perkins@pnnl.gov>
+
+	* bed.f90 (bed_particulate_exchange, bed_sediment_exchange): only
+	report negative values when they are "bad"
+
 2014-06-17  William A. Perkins  <william.perkins@pnnl.gov>
 
 	* mass2_parallel.f90 (output): only print the scalar mass balance
